# dynamate

./: .gitignore  CMakeLists.txt  Makefile  README.md  notes.txt
scenes/default/: index.txt
scenes/default/shaders/: fragShader.glsl
scenes/defaultSquare/: index.txt
scenes/defaultSquare/shaders/: vertShader.glsl
src/: Draw.cpp  Draw.hpp  Makefile  main  main.cpp
src/render/: Draw.cpp  Draw.hpp  DrawableObjectManager.cpp  DrawableObjectManager.hpp  ResourceManager.cpp  ResourceManager.hpp  UserInterfaceManager.cpp  UserInterfaceManager.hpp
src/render/objects/: DrawableObject.cpp  DrawableObject.hpp  DrawableObjects.cpp  DrawableObjects.hpp  UserInterfaceElement.cpp  UserInterfaceElement.hpp
src/render/utils/: Camera.cpp  Camera.hpp  DrawableObjectManager.cpp  DrawableObjectManager.hpp  OGLSetup.cpp  OGLSetup.hpp  ObjectLoader.cpp  ObjectLoader.hpp
src/ui/: index.txt
src/utils/: Camera.cpp  Camera.hpp  DrawableObjectManager.cpp  DrawableObjectManager.hpp  Loader.cpp  Loader.hpp  OGLSetup.cpp  OGLSetup.hpp  ObjectLoader.cpp  ObjectLoader.hpp  UILoader.cpp  UILoader.hpp  UserInterfaceLoader.cpp  UserInterfaceLoader.hpp  Utils.cpp  Utils.hpp
